[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aps-agentmesh"
version = "0.1.0"
description = "AgentMesh integration for the Agent Passport System — structural authorization gates, passport grades as trust signals, and cross-engine policy decision consumption"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tymofii Pidlisnyi", email = "tima@aeoess.com" },
    { name = "Microsoft Corporation" }
]
keywords = ["aps", "agent-passport", "agentmesh", "trust", "governance", "delegation", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
aps = ["agent-passport-system>=0.7.0,<0.8.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
APS = "https://aeoess.com"
