[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmesh_mcp_receipts"
version = "0.1.0"
description = "MCP tool-call receipt signing — Cedar policy decisions linked to governance receipts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Microsoft Corporation" }
]
keywords = ["agents", "mcp", "governance", "receipts", "cedar", "agentmesh", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41.0,<45.0"]
dev = ["pytest>=7.0", "cryptography>=41.0,<45.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
Documentation = "https://github.com/microsoft/agent-governance-toolkit/blob/main/examples/mcp-receipt-governed/README.md"

[tool.hatch.build.targets.wheel]
packages = ["mcp_receipt_governed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
