[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_trust_proxy"
version = "3.2.2"
description = "MCP proxy that wraps any MCP tool with AgentMesh trust verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name = "Microsoft Corporation" }]
keywords = ["mcp", "agents", "trust", "proxy", "agentmesh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0,<8.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["mcp_trust_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
