[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopeblind-protect-mcp"
version = "0.1.1"
description = "AgentMesh integration for ScopeBlind protect-mcp — Cedar policy enforcement and verifiable decision receipts for MCP tool calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tom Farley" },
    { name = "ScopeBlind Pty Ltd" }
]
keywords = ["mcp", "cedar", "policy", "receipts", "agentmesh", "scopeblind", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
Documentation = "https://scopeblind.com/docs/protect-mcp"
