[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structural_authz_agentmesh"
version = "3.2.2"
description = "AgentMesh adapter for structural authorization gates — consumes external policy decisions, trust grades, and delegation scope chains as AGT trust signals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Microsoft Corporation" }
]
keywords = ["agents", "trust", "authorization", "agentmesh", "policy", "ed25519", "delegation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=45.0.3,<47.0"]
dev = [
    "pytest>=7.0,<8.0",
    "cryptography>=45.0.3,<47.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["structural_authz_agentmesh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
