[project]
name = "carbon_auditor_swarm"
version = "3.2.2"
description = "Autonomous auditing system for the Voluntary Carbon Market (VCM)"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0,<2.0",
    "pydantic>=2.4.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0",
]

[build-system]
requires = ["setuptools>=61.0,<62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]